[package]
name = "rat-window"
version = "0.2.0"
edition = "2021"
authors = ["thscharler <thscharler@gmail.com>"]
description = "windows in the terminal with ratatui"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-window.git"
readme = "readme.md"
keywords = ["ratatui", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
crossterm = "0.28"
log = "0.4"
anyhow = "1.0"

rat-event = { version = "1.0", path = "../rat-event" }
rat-cursor = { version = "1.0", path = "../rat-cursor" }
rat-focus = { version = "0.30", path = "../rat-focus" }
rat-reloc = { version = "1.0", path = "../rat-reloc" }
rat-salsa = { version = "0.28", path = "../rat-salsa" }

[dev-dependencies]
anyhow = "1.0"
fern = "0.7"
rand = "0.8"
unicode-segmentation = "1.11"

rat-widget = { version = "0.32", path = "../rat-widget" }
rat-theme = { version = "0.27", path = "../rat-theme" }